fin-commit